RESOLVED FIXED287890
REGRESSION (290548@main): Observer for NSWindowWillCloseNotification not removed in -[WKWindowVisibilityObserver stopObserving]
https://bugs.webkit.org/show_bug.cgi?id=287890
Summary REGRESSION (290548@main): Observer for NSWindowWillCloseNotification not remo...
Andy Estes
Reported 2025-02-18 13:37:34 PST
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-18 13:37:51 PST
Andy Estes
Comment 2 2025-02-18 13:38:47 PST
EWS
Comment 3 2025-02-18 14:19:46 PST
Committed 290557@main (aa2a801baaed): <https://commits.webkit.org/290557@main> Reviewed commits have been landed. Closing PR #40783 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.