REGRESSION (290548@main): Observer for NSWindowWillCloseNotification not removed in -[WKWindowVisibilityObserver stopObserving] https://bugs.webkit.org/show_bug.cgi?id=287890 rdar://145086971

Unreviewed fix after 290548@main; removed the observer for NSWindowWillCloseNotification in -[WKWindowVisibilityObserver stopObserving].

* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(-[WKWindowVisibilityObserver stopObserving]):

Canonical link: https://commits.webkit.org/290557@main